Add configuration files and initial FastAPI setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,42 +1,20 @@
 services:
-#  backend:
+  backend:
 #    depends_on:
 #      - postgres
-#    expose:
-#      - ${BACKEND_PORT_INTERNAL}
-#    build:
-#        context: ./backend
-#        dockerfile: Dockerfile
-#    volumes:
-#      - ./backend/:/code
-#      - /code/.venv
-#    environment:
-#      - REDIS_PORT=${REDIS_PORT_INTERNAL}
-#      - REDIS_HOST=redis
-#      - SECRET_KEY=${SECRET_KEY}
-#      - ALGORITHM=${ALGORITHM}
-#      - PROJECT_NAME=${PROJECT_NAME}
-#      - CORS_ORIGINS=${BACKEND_CORS_ORIGINS}
-#      - DEBUG=${BACKEND_DEBUG}
-#      - DOMAIN=${DOMAIN}
-#      - ACCESS_TOKEN_EXPIRE_SECONDS=${ACCESS_TOKEN_EXPIRE_SECONDS}
-#      - SMTP_USER=${SMTP_USER}
-#      - SMTP_PASSWORD=${SMTP_PASSWORD}
-#      - EMAILS_FROM_EMAIL=${EMAILS_FROM_EMAIL}
-#      - SMTP_PORT=${SMTP_PORT}
-#      - SMTP_HOST=${SMTP_HOST}
-#      - EMAIL_FROM_NAME=${EMAIL_FROM_NAME}
-#      - POSTGRES_PORT=${POSTGRES_PORT}
-#      - POSTGRES_DB=${POSTGRES_DB}
-#      - POSTGRES_USER=${POSTGRES_USER}
-#      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-#      - POSTGRES_HOST=postgres
-#      - VERIFY_MAIL_PATH=${VERIFY_MAIL_PATH}
-#      - PASSWORD_RESET_PATH=${PASSWORD_RESET_PATH}
-#      - BACKEND_PORT_INTERNAL=${BACKEND_PORT_INTERNAL}
-#    networks:
-#      - app-network
-#    command: sh -c "uv run fastapi dev --port ${BACKEND_PORT_INTERNAL} --host 0.0.0.0 --reload --proxy-headers"
+    expose:
+      - ${BACKEND_PORT_INTERNAL}
+    build:
+        context: ./src/backend
+        dockerfile: Dockerfile
+    volumes:
+      - ./src/backend/:/code
+      - /code/.venv
+    env_file:
+      - ./.env
+    networks:
+      - app-network
+    command: sh -c "uv run fastapi dev --port ${BACKEND_PORT_INTERNAL} --host 0.0.0.0 --reload --proxy-headers"
 #
 #  frontend:
 #    depends_on:
@@ -82,7 +60,7 @@ services:
       - ./src/nginx/entrypoint.sh:/etc/nginx/entrypoint.sh
       - ./src/nginx/certs/:/etc/nginx/certs/
     environment:
-#        - BACKEND_PORT_INTERNAL=${BACKEND_PORT_INTERNAL}
+        - BACKEND_PORT_INTERNAL=${BACKEND_PORT_INTERNAL}
 #        - FRONTEND_PORT_INTERNAL=${FRONTEND_PORT_INTERNAL}
 #        - POSTGRES_PORT_INTERNAL=${POSTGRES_PORT_INTERNAL}
 #        - REDIS_PORT_INTERNAL=${REDIS_PORT_INTERNAL}
