--- a/.env
+++ b/.env
@@ -5,12 +5,12 @@
 #FRONTEND_PORT_INTERNAL=3000
 #
 ## Backend
-#BACKEND_PORT_INTERNAL=8080
-#SECRET_KEY="InsanlySecretKey"
-#ALGORITHM=HS256
-#PROJECT_NAME="actPoly"
-#BACKEND_CORS_ORIGINS=["http://localhost"]
-#BACKEND_DEBUG=true
+BACKEND_PORT_INTERNAL=8080
+SECRET_KEY="InsanlySecretKey"
+ALGORITHM=HS256
+PROJECT_NAME="PicASpot"
+BACKEND_CORS_ORIGINS=["http://localhost"]
+BACKEND_DEBUG=true
 DOMAIN="localhost"
 #ACCESS_TOKEN_EXPIRE_SECONDS=36000
 #VERIFY_MAIL_PATH="/user/verify"
