--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -60,13 +60,13 @@ http {
 #         }
 #
 #         # Backend API (Versioned Endpoints)
-#         location /api/ {
-#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-#             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,auth';
-#             limit_req zone=mylimit burst=20 nodelay; # Apply rate limiting
-#             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
-#         }
-#
+        location /api/ {
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,auth';
+            limit_req zone=mylimit burst=20 nodelay; # Apply rate limiting
+            proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
+        }
+
 #         # Backend WebSocket (Versioned Endpoints)
 #         location /api/ws {
 #             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/ws;
