--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -59,38 +59,12 @@ http {
 #             proxy_read_timeout 60;
 #         }
 #
-#         # Backend API (Versioned Endpoints)
+        # Backend API (Versioned Endpoints)
         location /api/ {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,auth';
             limit_req zone=mylimit burst=20 nodelay; # Apply rate limiting
             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
         }
-
-#         # Backend WebSocket (Versioned Endpoints)
-#         location /api/ws {
-#             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/ws;
-#
-#             # WebSocket support
-#             proxy_http_version 1.1;
-#             proxy_set_header Upgrade $http_upgrade;
-#             proxy_set_header Connection "upgrade";
-#
-#             # Long timeout for WebSockets
-#             proxy_read_timeout 86400;
-#         }
-
-        # MailHog Web UI (Restricted Access) - Uncomment if needed
-#         location /mailhog/ {
-#             proxy_pass http://mailhog:${MAILHOG_UI_PORT_INTERNAL}/;
-#             proxy_http_version 1.1;
-#             proxy_set_header Upgrade $http_upgrade;
-#             proxy_set_header Connection "upgrade";
-#             proxy_set_header X-Forwarded-Prefix /mailhog/;
-#             proxy_connect_timeout 600;
-#             proxy_send_timeout 600;
-#             proxy_read_timeout 600;
-#             send_timeout 600;
-#         }
     }
 }
