--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -1,13 +1,14 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "PicASpot backend"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.14"
 dependencies = [
-    "fastapi[standard]>=0.118.2",
+    "fastapi[standard]>=0.119.0",
     "pydantic-settings>=2.11.0",
 ]
+
 
 [project.optional-dependencies]
 test = [
