Add PostgreSQL configuration and update docker-compose for PostGIS

--- a/.env
+++ b/.env
@@ -7,6 +7,14 @@ BACKEND_CORS_ORIGINS=["http://localhost"]
 BACKEND_DEBUG=true
 DOMAIN="localhost"
 
+# PostgreSQL
+POSTGRES_PORT=5432
+POSTGRES_PORT_INTERNAL=5432
+POSTGRES_DB=monopoly
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_HOST=postgres
+
 
 ## NGINX
 HTTP_PORT=80
