--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,18 +14,18 @@ services:
       - app-network
     command: sh -c "uv run fastapi dev --port ${BACKEND_PORT_INTERNAL} --host 0.0.0.0 --reload --proxy-headers"
 
-  #  postgres:
-  #    image: postgres:17.2-alpine
-  #    ports:
-  #      - ${POSTGRES_PORT}:${POSTGRES_PORT_INTERNAL}
-  #    volumes:
-  #      - postgres_data:/var/lib/postgresql/data
-  #    environment:
-  #      - POSTGRES_DB=${POSTGRES_DB}
-  #      - POSTGRES_USER=${POSTGRES_USER}
-  #      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-  #    networks:
-  #      - app-network
+  postgres:
+    image: postgis/postgis:18-3.6-alpine
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT_INTERNAL}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    networks:
+      - app-network
 
   nginx:
     image: nginx:1.29.2-alpine-slim
@@ -45,8 +45,8 @@ services:
     networks:
       - app-network
 
-#volumes:
-#  postgres_data:
+volumes:
+  postgres_data:
 
 networks:
   app-network:
