--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = "PicASpot backend"
 requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.17.0",
-#    "asyncpg>=0.30.0",
+    "asyncpg>=0.30.0",
     "fastapi-mail>=1.5.2",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "fastapi[standard]>=0.119.0",
@@ -20,3 +20,11 @@ test = [
     "faker>=37.11.0",
     "pytest>=8.4.2",
 ]
+
+[tool.isort]
+profile = "black"
+line_length = 88
+skip_gitignore = true
+
+[tool.ruff]
+line-length = 88
