--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DOMAIN="localhost"
 # PostgreSQL
 POSTGRES_PORT=5432
 POSTGRES_PORT_INTERNAL=5432
-POSTGRES_DB=monopoly
+POSTGRES_DB=pickaspot_db
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_HOST=postgres
