Add MailHog configuration for email testing and update Nginx settings

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,10 +37,20 @@ services:
     environment:
       - BACKEND_PORT_INTERNAL=${BACKEND_PORT_INTERNAL}
       - DOMAIN=${DOMAIN}
+      - MAILHOG_UI_PORT_INTERNAL=${MAILHOG_UI_PORT_INTERNAL}
     entrypoint: [ "/bin/sh", "/etc/nginx/entrypoint.sh" ]
     ports:
       - "${HTTP_PORT}:80"
       - "${HTTPS_PORT}:443"
+    networks:
+      - app-network
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    expose:
+      - ${MAILHOG_UI_PORT_INTERNAL}
+    ports:
+      - ${MAILHOG_PORT}:${MAILHOG_PORT_INTERNAL}
     networks:
       - app-network
 
