--- a/.env
+++ b/.env
@@ -7,6 +7,14 @@ BACKEND_CORS_ORIGINS=["http://localhost"]
 BACKEND_DEBUG=true
 DOMAIN="localhost"
 
+# Email (Mailhog)
+SMTP_USER="test@test.com"
+SMTP_PASSWORD="password"
+EMAILS_FROM_EMAIL="test@out.com"
+SMTP_PORT=1025
+SMTP_HOST="mailhog"
+EMAIL_FROM_NAME="No reply"
+
 # PostgreSQL
 POSTGRES_PORT=5432
 POSTGRES_PORT_INTERNAL=5432
@@ -19,3 +27,8 @@ POSTGRES_HOST=postgres
 ## NGINX
 HTTP_PORT=80
 HTTPS_PORT=443
+
+# Mailhog
+MAILHOG_UI_PORT_INTERNAL=8025
+MAILHOG_PORT_INTERNAL=1025
+MAILHOG_PORT=1025
