--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -66,5 +66,18 @@ http {
             limit_req zone=mylimit burst=20 nodelay; # Apply rate limiting
             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
         }
+
+        # MailHog Web UI (Restricted Access) - Uncomment if needed
+        location /dev/mailhog/ {
+            proxy_pass http://mailhog:${MAILHOG_UI_PORT_INTERNAL}/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Forwarded-Prefix /mailhog/;
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+            send_timeout 600;
+        }
     }
 }
