Add Redis service configuration to Docker Compose and update environment variables

--- a/.env
+++ b/.env
@@ -32,3 +32,9 @@ HTTPS_PORT=443
 MAILHOG_UI_PORT_INTERNAL=8025
 MAILHOG_PORT_INTERNAL=1025
 MAILHOG_PORT=1025
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PORT_INTERNAL=6379
+REDIS_PASSWORD="mysecretpassword"
