--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,14 @@
 services:
+  redis:
+    image: redis:8.2.2-alpine
+    expose:
+      - ${REDIS_PORT_INTERNAL}
+    volumes:
+      - redis-data:/data
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
+    networks:
+      - app-network
+
   backend:
     expose:
       - ${BACKEND_PORT_INTERNAL}
@@ -57,6 +67,7 @@ services:
 
 volumes:
   postgres_data:
+  redis-data:
 
 networks:
   app-network:
