--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -6,11 +6,13 @@ requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.17.0",
     "asyncpg>=0.30.0",
+    "celery>=5.5.3",
     "fastapi-mail>=1.5.2",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "fastapi[standard]>=0.119.0",
     "geoalchemy2>=0.18.0",
     "pydantic-settings>=2.11.0",
+    "redis>=6.4.0",
     "sqlalchemy>=2.0.44",
 ]
 
