Refactor .editorconfig and .prettierrc

--- a/src/frontend/.prettierrc
+++ b/src/frontend/.prettierrc
@@ -4,6 +4,10 @@
   "singleQuote": true,
   "bracketSameLine": true,
   "trailingComma": "es5",
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindFunctions": ["cva"]
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
+  "tailwindFunctions": [
+    "cva"
+  ]
 }
