Add Celery worker and email task functionality with HTML templates

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,9 @@ services:
       - app-network
 
   backend:
+    depends_on:
+      - postgres
+      - redis
     expose:
       - ${BACKEND_PORT_INTERNAL}
     build:
