--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -6,10 +6,12 @@ requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.17.0",
     "asyncpg>=0.30.0",
+    "asgiref>=3.10.0",
     "celery>=5.5.3",
     "fastapi-mail>=1.5.2",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "fastapi[standard]>=0.119.0",
+    "flower>=2.0.1",
     "geoalchemy2>=0.18.0",
     "pydantic-settings>=2.11.0",
     "redis>=6.4.0",
@@ -31,34 +33,6 @@ known_first_party = ["app", "tests"]
 [tool.ruff]
 target-version = "py314"
 indent-width = 4
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".git-rewrite",
-    ".hg",
-    ".ipynb_checkpoints",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pyenv",
-    ".pytest_cache",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    ".vscode",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "site-packages",
-    "venv",
-]
 
 [tool.ruff.lint]
 select = [
@@ -74,8 +48,6 @@ ignore = [
     "B008", # do not perform function calls in argument defaults
     "C901", # complexity
 ]
-
-fixable = ["ALL"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
