--- a/.env
+++ b/.env
@@ -33,6 +33,10 @@ MAILHOG_UI_PORT_INTERNAL=8025
 MAILHOG_PORT_INTERNAL=1025
 MAILHOG_PORT=1025
 
+# Flover
+FLOWER_PORT=5555
+FLOWER_PORT_INTERNAL=5555
+
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
