Add celery-types dependency to pyproject.toml and update lock file

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "asgiref>=3.10.0",
     "celery>=5.5.3",
+    "celery-types==0.23.0",
     "fastapi-mail>=1.5.2",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "fastapi[standard]>=0.119.0",
