Add email verification and reset password paths to settings and update links in user manager

--- a/.env
+++ b/.env
@@ -15,6 +15,10 @@ SMTP_PORT=1025
 SMTP_HOST="mailhog"
 EMAIL_FROM_NAME="No reply"
 
+# Email paths
+EMAIL_VERIFY_PATH="/auth/verify"
+EMAIL_RESET_PASSWORD_PATH="/auth/reset-password"
+
 # PostgreSQL
 POSTGRES_PORT=5432
 POSTGRES_PORT_INTERNAL=5432
