Create application API lib

--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ HTTPS_PORT=443
 MAILHOG_UI_PORT_INTERNAL=8025
 MAILHOG_PORT_INTERNAL=1025
 MAILHOG_PORT=1025
+
+
+## Frontend
+API_URL="https://localhost/api"
