--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -14,7 +14,50 @@ http {
     server {
         listen 80;
         server_name ${DOMAIN};
-        return 301 https://$host$request_uri; # Redirect all HTTP traffic to HTTPS
+
+        # General Optimizations
+        tcp_nopush on;
+        tcp_nodelay on;
+        keepalive_timeout 65;
+        keepalive_requests 100;
+        client_body_buffer_size 10K;
+        client_header_buffer_size 1k;
+        client_max_body_size 8M;
+        large_client_header_buffers 4 16k;
+
+        # Common proxy headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+
+        # Backend API (Versioned Endpoints)
+        location /api/ {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+
+            limit_req zone=mylimit burst=20 nodelay; # Apply rate limiting
+            proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
+        }
+
+        # MailHog Web UI (Restricted Access)
+        location /dev/mailhog/ {
+            proxy_pass http://mailhog:${MAILHOG_UI_PORT_INTERNAL}/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Forwarded-Prefix /mailhog/;
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+            send_timeout 600;
+        }
     }
 
     server {
