--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -7,14 +7,17 @@ dependencies = [
     "alembic>=1.17.0",
     "asyncpg>=0.30.0",
     "asgiref>=3.10.0",
+    "bcrypt>=5.0.0",
     "celery>=5.5.3",
     "celery-types==0.23.0",
-    "fastapi-mail>=1.5.2",
-    "fastapi-users[sqlalchemy]>=14.0.1",
+    "cryptography>=46.0.3",
+    "fastapi-mail>=1.5.7",
     "fastapi[standard]>=0.119.0",
     "flower>=2.0.1",
     "geoalchemy2>=0.18.0",
+    "itsdangerous>=2.2.0",
     "pydantic-settings>=2.11.0",
+    "pyjwt>=2.10.1",
     "redis>=6.4.0",
     "sqlalchemy>=2.0.44",
 ]
