Add access token expiration setting and ensure consistent formatting in code

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ PROJECT_NAME="PicASpot"
 BACKEND_CORS_ORIGINS=["http://localhost"]
 BACKEND_DEBUG=true
 DOMAIN="localhost"
+ACCESS_TOKEN_EXPIRE_SECONDS=36000
 
 # Email (Mailhog)
 SMTP_USER="test@test.com"
