Disable email verification flow and update related UI components

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ SMTP_HOST="mailhog"
 EMAIL_FROM_NAME="No reply"
 
 # Email paths
-EMAIL_VERIFY_PATH="/auth/verify"
+EMAIL_VERIFY_PATH="picASpot://verify-email?token="
 EMAIL_RESET_PASSWORD_PATH="/auth/reset-password"
 
 # PostgreSQL
