--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "itsdangerous>=2.2.0",
     "pydantic-settings>=2.11.0",
     "pyjwt>=2.10.1",
-    "redis>=6.4.0",
+    "redis>=7.0.0",
     "sqlalchemy>=2.0.44",
 ]
 
@@ -27,6 +27,11 @@ dependencies = [
 test = [
     "faker>=37.11.0",
     "pytest>=8.4.2",
+    "pytest-asyncio>=0.25.0",
+    "pytest-cov>=6.0.0",
+    "pytest-mock>=3.14.0",
+    "httpx>=0.28.0",
+    "aiosqlite>=0.20.0",
 ]
 
 [tool.isort]
