Add default development users to .env file

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+## Default development users
+ADMIN_EMAIL="admin@picaspot.com"
+ADMIN_PASSWORD="admin@picaspot.com"
+USERS_EMAIL="user@picaspot.com"
+USERS_PASSWORD="user@picaspot.com"
+
 ## Backend
 BACKEND_PORT_INTERNAL=8080
 SECRET_KEY="InsanlySecretKey"
