--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-## Default development users
+## Default development users (comment them out to remove)
 ADMIN_EMAIL="admin@picaspot.com"
 ADMIN_PASSWORD="admin@picaspot.com"
-USERS_EMAIL="user@picaspot.com"
-USERS_PASSWORD="user@picaspot.com"
+USER_EMAIL="user@picaspot.com"
+USER_PASSWORD="user@picaspot.com"
 
 ## Backend
 BACKEND_PORT_INTERNAL=8080
@@ -33,7 +33,6 @@ POSTGRES_DB=pickaspot_db
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_HOST=postgres
-
 
 ## NGINX
 HTTP_PORT=80
