feat: Update Docker setup to run Alembic migrations at container startup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,10 @@ services:
 
   backend:
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
     expose:
       - ${BACKEND_PORT_INTERNAL}
     build:
@@ -73,6 +75,11 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   nginx:
     image: nginx:1.29.2-alpine-slim
