--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.14.0-slim
+# Base stage - common dependencies for all services
+FROM python:3.14.0-slim AS base
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
@@ -27,6 +28,10 @@ WORKDIR /code/
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --extra "test" --frozen --no-dev
 
+
+# Backend stage - includes entrypoint for migrations
+FROM base AS backend
+
 # Copy and set up entrypoint script for running migrations at startup
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
@@ -35,3 +40,11 @@ ENTRYPOINT ["/entrypoint.sh"]
 
 # Don't run migrations at build time - they need env vars and a running database
 # Migrations run at container startup via entrypoint.sh
+
+
+# Worker stage - for Celery and Flower (no migrations needed)
+FROM base AS worker
+
+# No entrypoint script needed - workers don't run migrations
+# Command will be specified in docker-compose.yaml
+
