--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,13 +8,18 @@ services:
     command: redis-server --requirepass "${REDIS_PASSWORD}"
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
 
   backend:
     depends_on:
       postgres:
         condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
     expose:
       - ${BACKEND_PORT_INTERNAL}
     build:
@@ -28,7 +33,6 @@ services:
       - ./.env
     networks:
       - app-network
-    command: sh -c "uv run fastapi dev --port ${BACKEND_PORT_INTERNAL} --host 0.0.0.0 --reload --proxy-headers"
 
   celery_worker:
     depends_on:
@@ -39,7 +43,6 @@ services:
       context: ./src/backend
       dockerfile: Dockerfile
       target: worker
-    command: uv run celery --app app.celery.worker worker --loglevel=info --uid=nobody  --gid=nogroup
     volumes:
       - ./src/backend/:/code
       - /code/.venv
@@ -52,17 +55,15 @@ services:
     container_name: flower
     expose:
       - ${FLOWER_PORT_INTERNAL}
-    environment:
-      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:${REDIS_PORT_INTERNAL}/0
-      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:${REDIS_PORT_INTERNAL}/0
     depends_on:
       - celery_worker
       - redis
     build:
       context: ./src/backend
       dockerfile: Dockerfile
-      target: worker
-    command: uv run celery --broker=redis://:${REDIS_PASSWORD}@redis:${REDIS_PORT_INTERNAL}/0 flower --port=${FLOWER_PORT_INTERNAL} --url-prefix=/dev/flower
+      target: flower
+    env_file:
+      - ./.env
     networks:
       - app-network
 
@@ -79,7 +80,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -117,7 +118,8 @@ services:
     image: postgis/postgis:18-3.6
     container_name: backup
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT_INTERNAL=${POSTGRES_PORT_INTERNAL}
