Update geoalchemy2 dependency to include shapely and remove unused timestamp fields from schemas

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "fastapi-mail>=1.5.7",
     "fastapi[standard]>=0.119.0",
     "flower>=2.0.1",
-    "geoalchemy2>=0.18.0",
+    "geoalchemy2[shapely]>=0.18.0",
     "itsdangerous>=2.2.0",
     "pydantic-settings>=2.11.0",
     "pyjwt>=2.10.1",
