--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.10",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
