--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -15,18 +15,24 @@ ENV UV_COMPILE_BYTECODE=1 \
     UV_LINK_MODE=copy
 
 # Install the project's dependencies using the lockfile and settings
+#RUN --mount=type=cache,target=/root/.cache/uv \
+#    --mount=type=bind,source=uv.lock,target=uv.lock \
+#    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+#    uv sync --frozen --no-install-project --no-dev
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --extra "test" --frozen --no-install-project --no-dev
+    uv sync --frozen --no-install-project
 
 # Then, add the rest of the project source code and install it
 # Installing separately from its dependencies allows optimal layer caching
 COPY . /code/
 WORKDIR /code/
 
+#RUN --mount=type=cache,target=/root/.cache/uv \
+#    uv sync --frozen --no-dev
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --extra "test" --frozen --no-dev
+    uv sync --frozen
 
 
 # Backend stage - includes entrypoint for migrations
