--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -20,17 +20,20 @@ dependencies = [
     "pyjwt>=2.10.1",
     "redis>=7.1.0",
     "sqlalchemy>=2.0.44",
-    "faker>=37.11.0",
 ]
 
 
 [dependency-groups]
 dev = [
-    "faker>=37.11.0",
-    "pytest>=8.4.2",
-    "pytest-asyncio>=0.25.0",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=0.24.0",
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.14.0",
+    "pytest-xdist>=3.6.1",
+    "pytest-timeout>=2.3.1",
+    "pytest-benchmark>=5.1.0",
+    "hypothesis>=6.122.3",
+    "faker>=33.3.0",
     "httpx>=0.28.0",
     "aiosqlite>=0.20.0",
 ]
@@ -64,4 +67,39 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "-v --tb=short"
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+]
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests",
+    "slow: Slow running tests",
+    "benchmark: Performance benchmark tests",
+]
+timeout = 300
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::PendingDeprecationWarning",
+]
+
+[tool.coverage.run]
+source = ["app"]
+omit = [
+    "*/tests/*",
+    "*/__pycache__/*",
+    "*/alembic/*",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if TYPE_CHECKING:",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+]
