Add MinIO configuration to Docker setup and Nginx

--- a/.env
+++ b/.env
@@ -52,3 +52,14 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PORT_INTERNAL=6379
 REDIS_PASSWORD="mysecretpassword"
+
+# MinIO
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+MINIO_PORT=9000
+MINIO_PORT_INTERNAL=9000
+MINIO_CONSOLE_PORT=9001
+MINIO_CONSOLE_PORT_INTERNAL=9001
+MINIO_BROWSER_REDIRECT_URL=https://localhost/dev/minio/console
+MINIO_SERVER_URL=https://localhost/dev/minio
+
