--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -11,9 +11,29 @@ http {
     # Rate Limiting (Optional)
     limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
 
+    upstream minio {
+        server minio1:9000;
+#         server minio2:9000;
+#         server minio3:9000;
+#         server minio4:9000;
+    }
+
+    upstream console {
+        ip_hash;
+        server minio1:9001;
+#         server minio2:9001;
+#         server minio3:9001;
+#         server minio4:9001;
+    }
+
     server {
         listen 80;
         server_name ${DOMAIN};
+
+        # MinIO specific
+        ignore_invalid_headers off;
+        proxy_buffering off;
+        proxy_request_buffering off;
 
         # General Optimizations
         tcp_nopush on;
@@ -22,7 +42,7 @@ http {
         keepalive_requests 100;
         client_body_buffer_size 10K;
         client_header_buffer_size 1k;
-        client_max_body_size 8M;
+        client_max_body_size 0;
         large_client_header_buffers 4 16k;
 
         # Common proxy headers
@@ -58,8 +78,62 @@ http {
             proxy_read_timeout 600;
             send_timeout 600;
         }
+
+        # Minio Console
+        location /dev/minio/ {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_connect_timeout 300;
+            # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding off;
+
+            proxy_pass http://minio;
+        }
+    }
+    # MinIO Server Block
+    server {
+        listen       9001;
+        listen  [::]:9001;
+        server_name  localhost;
+
+        # To allow special characters in headers
+        ignore_invalid_headers off;
+        # Allow any size file to be uploaded.
+        # Set to a value such as 1000m; to restrict file size to a specific value
+        client_max_body_size 0;
+        # To disable buffering
+        proxy_buffering off;
+        proxy_request_buffering off;
+
+        location /dev/minio/ {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-NginX-Proxy true;
+
+            # This is necessary to pass the correct IP to be hashed
+            real_ip_header X-Real-IP;
+
+            proxy_connect_timeout 300;
+
+            # To support websocket
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            chunked_transfer_encoding off;
+
+            proxy_pass http://console;
+        }
     }
 
+    # HTTPS Server Block
     server {
         listen 443 ssl;
         http2 on;
