--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,14 @@
 x-minio-common: &minio-common
   image: quay.io/minio/minio
-#  image: quay.io/minio/minio:RELEASE.2025-09-06T17-38-46Z
-  command: server --console-address :${MINIO_CONSOLE_PORT} http://minio1/data{1...2}
-#  command: server --console-address ":9001" http://minio{1...4}/data{1...2}
+  command: server --console-address :${MINIO_CONSOLE_PORT} http://minio{1...4}/data{1...2}
   expose:
     - ${MINIO_PORT_INTERNAL}
     - ${MINIO_CONSOLE_PORT_INTERNAL}
-  ports:
-    - ${MINIO_PORT}:${MINIO_PORT_INTERNAL}
-    - ${MINIO_CONSOLE_PORT}:${MINIO_CONSOLE_PORT_INTERNAL}
   environment:
     MINIO_ROOT_USER: ${MINIO_ROOT_USER}
     MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+  networks:
+    - app-network
   healthcheck:
     test: [ "CMD", "mc", "ready", "local" ]
     interval: 5s
@@ -166,42 +163,47 @@ services:
   minio1:
     <<: *minio-common
     hostname: minio1
+    ports:
+      - "${MINIO_PORT}:${MINIO_PORT_INTERNAL}"
+      - "${MINIO_CONSOLE_PORT}:${MINIO_CONSOLE_PORT_INTERNAL}"
     volumes:
-      - minio-data1-1:/data1
-      - minio-data1-2:/data2
-    networks:
-      - app-network
-#  minio:
-#    image: quay.io/minio/minio
-#    container_name: minio
-#    hostname: minio
-#    expose:
-#      - ${MINIO_PORT_INTERNAL}
-#      - ${MINIO_CONSOLE_PORT_INTERNAL}
-#    ports:
-#      - ${MINIO_PORT}:${MINIO_PORT_INTERNAL}
-#      - ${MINIO_CONSOLE_PORT}:${MINIO_CONSOLE_PORT_INTERNAL}
-#    volumes:
-#      - minio-data:/data
-#    environment:
-#      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
-#      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
-#      - MINIO_BROWSER_REDIRECT_URL=${MINIO_BROWSER_REDIRECT_URL}
-#      - MINIO_SERVER_URL=${MINIO_SERVER_URL}
-#    command: server /data --console-address ":${MINIO_CONSOLE_PORT_INTERNAL}"
-#    networks:
-#      - app-network
-#    healthcheck:
-#      test: ["CMD", "mc", "ready", "local"]
-#      interval: 5s
-#      timeout: 5s
-#      retries: 5
+      - minio_1_1:/data1
+      - minio_1_2:/data2
+
+
+  minio2:
+    <<: *minio-common
+    hostname: minio2
+    volumes:
+      - minio_2_1:/data1
+      - minio_2_2:/data2
+
+  minio3:
+    <<: *minio-common
+    hostname: minio3
+    volumes:
+      - minio_3_1:/data1
+      - minio_3_2:/data2
+
+  minio4:
+    <<: *minio-common
+    hostname: minio4
+    volumes:
+      - minio_4_1:/data1
+      - minio_4_2:/data2
 
 volumes:
   postgres_data:
   redis-data:
-  minio-data1-1:
-  minio-data1-2:
+  # MinIO volumes for 4 nodes with 2 disks each
+  minio_1_1:
+  minio_1_2:
+  minio_2_1:
+  minio_2_2:
+  minio_3_1:
+  minio_3_2:
+  minio_4_1:
+  minio_4_2:
 
 networks:
   app-network:
