--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
+    "expo-camera": "~17.0.9",
     "expo-linking": "~8.0.8",
     "expo-localization": "^17.0.7",
     "expo-location": "~19.0.7",
