Refactor MinIO integration: introduce StorageService for object management and update endpoints to use dependency injection

--- a/.env
+++ b/.env
@@ -65,6 +65,7 @@ MINIO_SERVER_URL=https://localhost/dev/minio
 
 # MinIO Storage Configuration
 MINIO_ENDPOINT=minio1:9000
+MINIO_EXTERNAL_ENDPOINT=localhost
 MINIO_SECURE=false
 MINIO_BUCKET_NAME=picaspot-storage
 MINIO_REGION=us-east-1
