Fix MinIO Console

--- a/.env
+++ b/.env
@@ -60,8 +60,8 @@ MINIO_PORT=9000
 MINIO_PORT_INTERNAL=9000
 MINIO_CONSOLE_PORT=9001
 MINIO_CONSOLE_PORT_INTERNAL=9001
-MINIO_BROWSER_REDIRECT_URL=https://localhost/dev/minio/console
-MINIO_SERVER_URL=https://localhost/dev/minio
+MINIO_BROWSER_REDIRECT_URL=http://localhost/dev/minio
+MINIO_DOMAIN=localhost/dev/minio
 
 # MinIO Storage Configuration
 MINIO_ENDPOINT=minio1:9000
