--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -5,6 +5,11 @@ events {
 }
 
 http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log  /var/log/nginx/access.log  main;
+
     include /etc/nginx/mime.types;
     sendfile on;
 
@@ -81,10 +86,12 @@ http {
 
         # Minio Console
         location /dev/minio/ {
+            rewrite ^/dev/minio/(.*) /$1 break;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Prefix /dev/minio;
 
             proxy_connect_timeout 300;
             # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
@@ -92,13 +99,13 @@ http {
             proxy_set_header Connection "";
             chunked_transfer_encoding off;
 
-            proxy_pass http://minio;
+            proxy_pass http://console/;
         }
     }
     # MinIO Server Block
     server {
-        listen       9001;
-        listen  [::]:9001;
+        listen       9000;
+        listen  [::]:9000;
         server_name  localhost;
 
         # To allow special characters in headers
@@ -110,7 +117,7 @@ http {
         proxy_buffering off;
         proxy_request_buffering off;
 
-        location /dev/minio/ {
+        location / {
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -129,7 +136,7 @@ http {
 
             chunked_transfer_encoding off;
 
-            proxy_pass http://console;
+            proxy_pass http://minio;
         }
     }
 
@@ -205,6 +212,24 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+        }
+
+        # Minio Console
+        location /dev/minio/ {
+            rewrite ^/dev/minio/(.*) /$1 break;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Prefix /dev/minio;
+
+            proxy_connect_timeout 300;
+            # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding off;
+
+            proxy_pass http://console/;
         }
     }
 }
