--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -96,7 +96,8 @@ http {
             proxy_connect_timeout 300;
             # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             chunked_transfer_encoding off;
 
             proxy_pass http://console/;
@@ -226,7 +227,8 @@ http {
             proxy_connect_timeout 300;
             # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             chunked_transfer_encoding off;
 
             proxy_pass http://console/;
