Add nginx configuration for Flower service with WebSocket support

--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -84,6 +84,16 @@ http {
             send_timeout 600;
         }
 
+        location /dev/flower/ {
+            proxy_pass http://flower:${FLOWER_PORT_INTERNAL}/dev/flower/;
+
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # Minio Console
         location /dev/minio/ {
             rewrite ^/dev/minio/(.*) /$1 break;
