Add Kafka UI service and update configurations in Docker setup

--- a/.env
+++ b/.env
@@ -94,7 +94,9 @@ IMAGE_QUALITY=85
 # Kafka (KRaft cluster)
 # ===================================
 KAFKA_PORT_INTERNAL=9092
+KAFKA_BOOTSTRAP_SERVERS=["kafka-0:9092", "kafka-1:9092", "kafka-2:9092"]
 
-# Kakf UI
+# Kafka UI
 KAFKA_UI_PORT=8081
+KAFKA_UI_PORT_INTERNAL=8080
 
